--- a/4 Project - With level progression/Project/Project.vcxproj
+++ b/4 Project - With level progression/Project/Project.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="Project.cpp" />
     <ClCompile Include="SettingsState.cpp" />
     <ClCompile Include="StateMachineExampleGame.cpp" />
+    <ClCompile Include="Weapon.cpp" />
     <ClCompile Include="WinState.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -191,6 +192,7 @@
     <ClInclude Include="SettingsState.h" />
     <ClInclude Include="StateMachineExampleGame.h" />
     <ClInclude Include="Utility.h" />
+    <ClInclude Include="Weapon.h" />
     <ClInclude Include="WinState.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
